# WRS2023

./: .gitignore  README.md
base_navigation/: CMakeLists.txt  package.xml
environment_monitoring/: CMakeLists.txt  package.xml
manipulator_controller/: CMakeLists.txt  package.xml
maps/: dummy.pgm  map.pgm  map.yaml
object_handling/: CMakeLists.txt  package.xml
wheel_controller/: CMakeLists.txt  package.xml
wrs2023_navigation/: CMakeLists.txt  package.xml
wrs2023_navigation/config/: rviz.rviz  waypoints copy.yaml  waypoints.yaml
wrs2023_navigation/launch/: demo.launch  navigation.launch
wrs2023_navigation/scripts/: navigation.py
wrs2023_navigation/test/: demo.test  test.py
wrs2023_object_detection/: CMakeLists.txt  package.xml
wrs2023_object_detection/scripts/: object_detection.py
wrs2023_queue_monitor/: CMakeLists.txt  package.xml
wrs2023_queue_monitor/src/: monitor.py
wrs2023_transaction/: CMakeLists.txt  package.xml
wrs2023_transaction/scripts/: transaction.py
