<?xml version="1.0"?>
<package format="2">
  <name>wrs2023_navigation</name>
  <version>0.3.4</version>

  <description>wrs2023_navigation</description>

  <maintainer email="labiybafakh@gmail.com">Muhammad Labiyb Afakh</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>seed_r7_ros_controller</depend>
  <depend>seed_r7_robot_interface</depend>
  <depend>seed_r7_bringup</depend>
  <depend>seed_r7_moveit_config</depend>
  <depend>seed_r7_typef_moveit_config</depend>
  <depend>seed_r7_typeg_moveit_config</depend>
  <depend>seed_r7_navigation</depend>
  <depend>smach_ros</depend>
  <depend>smach_viewer</depend>
  <depend>moveit_simple_controller_manager</depend>
  <depend>moveit_commander</depend>
  <depend>rviz_plugin_tutorials</depend>
  <depend>rviz</depend>

  <test_depend>roslaunch</test_depend>
  <test_depend>rostest</test_depend>

</package>
